--- a/index.html
+++ b/index.html
@@ -11,134 +11,166 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./CSS/styles.css" />
   </head>
 
   <body>
     <!-- Header -->
     <header class="header">
-      <nav class="nav">
-        <a class="logo link" href="./index.html">Web<span class="logo-primary">Studio</span></a>
-        <ul class="nav-list list">
-          <li class="nav-item"><a class="nav-link link current" href="./index.html">Студия</a></li>
-          <li class="nav-item">
-            <a class="nav-link link" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="nav-item"><a class="nav-link link" href="">Контакты</a></li>
-        </ul>
-      </nav>
+      <div class="container header-container">
+        <nav class="nav">
+          <a class="logo link" href="./index.html">Web<span class="logo-primary">Studio</span></a>
+          <ul class="nav-list list">
+            <li class="nav-item">
+              <a class="nav-link link current" href="./index.html">Студия</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="nav-item"><a class="nav-link link" href="">Контакты</a></li>
+          </ul>
+        </nav>
 
-      <ul class="list">
-        <li><a class="nav-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="nav-contact link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
+        <ul class="header-contact list">
+          <li class="nav-contact-item">
+            <a class="nav-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="nav-contact-item">
+            <a class="nav-contact link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </div>
     </header>
 
     <main>
       <!-- Hero -->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-btn" type="button">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">Эффективные решения</br> для вашего бизнеса</h1>
+          <button class="hero-btn" type="button">Заказать услугу</button>
+        </div>
       </section>
 
       <!--Особенности  -->
-      <section class="advantages">
-        <h2 hidden>Особенности</h2>
-        <ul class="advantages-list list">
-          <li class="advantages-item">
-            <h3 class="advantages-title">Внимание к деталям</h3>
-            <p class="advantages-text">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Пунктуальность</h3>
-            <p class="advantages-text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Планирование</h3>
-            <p class="advantages-text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Современные технологии</h3>
-            <p class="advantages-text">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <section class="advantages section">
+        <div class="container ">
+          <h2 hidden>Особенности</h2>
+          <ul class="advantages-list list">
+            <li class="advantages-item">
+              <h3 class="advantages-title">Внимание к деталям</h3>
+              <p class="advantages-text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Пунктуальность</h3>
+              <p class="advantages-text">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Планирование</h3>
+              <p class="advantages-text">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Современные технологии</h3>
+              <p class="advantages-text">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Чем мы занимаемся -->
       <section class="work">
-        <h2 class="work-title">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li><img src="./images/computer.jpg" alt="Вёрстка" width="370" height="294" /></li>
-          <li>
-            <img
-              src="./images/smartphone.jpg"
-              alt="Разработка приложений"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li><img src="./images/laptop.jpg" alt="Дизайн" width="370" height="294" /></li>
-        </ul>
+        <div class="container">
+          <h2 class="work-title">Чем мы занимаемся</h2>
+          <ul class="work-list list">
+            <li class="work-item"><img src="./images/computer.jpg" alt="Вёрстка" width="370" height="294" /></li>
+            <li class="work-item">
+              <img
+                src="./images/smartphone.jpg"
+                alt="Разработка приложений"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="work-item"><img src="./images/laptop.jpg" alt="Дизайн" width="370" height="294" /></li>
+          </ul>
+        </div>
       </section>
 
       <!-- Наша команда -->
-      <section class="team">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="team-list list">
-          <li class="team-item">
-            <img src="./images/our-team/igor.jpg" alt="Игорь Демьяненко" width="270" height="260" />
-            <h3 class="team-member">Игорь Демьяненко</h3>
-            <p class="team-position">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/our-team/olga.jpg" alt="Ольга Репина" width="270" height="260" />
-            <h3 class="team-member">Ольга Репина</h3>
-            <p class="team-position">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/our-team/nikolay.jpg"
-              alt="Николай Тарасов"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-member">Николай Тарасов</h3>
-            <p class="team-position">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/our-team/mihail.jpg" alt="Михаил Ермаков" width="270" height="260" />
-            <h3 class="team-member">Михаил Ермаков</h3>
-            <p class="team-position">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team section">
+        <div class="container">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="team-item">
+              <img
+                src="./images/our-team/igor.jpg"
+                alt="Игорь Демьяненко"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-member">Игорь Демьяненко</h3>
+              <p class="team-position">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img src="./images/our-team/olga.jpg" alt="Ольга Репина" width="270" height="260" />
+              <h3 class="team-member">Ольга Репина</h3>
+              <p class="team-position">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/our-team/nikolay.jpg"
+                alt="Николай Тарасов"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-member">Николай Тарасов</h3>
+              <p class="team-position">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/our-team/mihail.jpg"
+                alt="Михаил Ермаков"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-member">Михаил Ермаков</h3>
+              <p class="team-position">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a class="logo link" href="/index.html">Web<span class="logo-secondary">Studio</span></a>
-      <address>
-        <ul class="footer-list list">
-          <li class="footer-item">
-            <a class="map-link link" href="https://goo.gl/maps/j2nnSXGD3ZRQ95yC8"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li class="footer-item">
-            <a class="footer-contact link" href="mailto:info@example.com">info@example.com</a>
-          </li>
-          <li class="footer-item">
-            <a class="footer-contact link" href="tel:+380991111111">+38 099 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="logo link" href="/index.html">Web<span class="logo-secondary">Studio</span></a>
+        <address class="footer-adress">
+          <ul class="footer-list list">
+            <li class="footer-item">
+              <a class="map-link link" href="https://goo.gl/maps/j2nnSXGD3ZRQ95yC8"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="footer-item">
+              <a class="footer-contact link" href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-contact link" href="tel:+380991111111">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
