--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
       <!-- Hero -->
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Эффективные решения</br> для вашего бизнеса</h1>
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="hero-btn" type="button">Заказать услугу</button>
         </div>
       </section>
 
       <!--Особенности  -->
       <section class="advantages section">
-        <div class="container ">
+        <div class="container">
           <h2 hidden>Особенности</h2>
           <ul class="advantages-list list">
             <li class="advantages-item">
@@ -93,7 +93,15 @@
         <div class="container">
           <h2 class="work-title">Чем мы занимаемся</h2>
           <ul class="work-list list">
-            <li class="work-item"><img src="./images/computer.jpg" alt="Вёрстка" width="370" height="294" /></li>
+            <li class="work-item">
+              <img
+                class="no-gap"
+                src="./images/computer.jpg"
+                alt="Вёрстка"
+                width="370"
+                height="294"
+              />
+            </li>
             <li class="work-item">
               <img
                 src="./images/smartphone.jpg"
@@ -102,7 +110,9 @@
                 height="294"
               />
             </li>
-            <li class="work-item"><img src="./images/laptop.jpg" alt="Дизайн" width="370" height="294" /></li>
+            <li class="work-item">
+              <img src="./images/laptop.jpg" alt="Дизайн" width="370" height="294" />
+            </li>
           </ul>
         </div>
       </section>
