--- a/portfolio.html
+++ b/portfolio.html
@@ -66,8 +66,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-title">Технокряк</h2>
-                <p class="projects-text">Веб-сайт</p>
+                <div class="projects-item-content">
+                  <h2 class="projects-title">Технокряк</h2>
+                  <p class="projects-text">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -78,8 +80,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
-                <p class="projects-text">Дизайн</p>
+                <div class="projects-item-content">
+                  <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
+                  <p class="projects-text">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -90,15 +94,19 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-title">Ресторан Seafood</h2>
-                <p class="projects-text">Приложение</p>
+                <div class="projects-item-content">
+                  <h2 class="projects-title">Ресторан Seafood</h2>
+                  <p class="projects-text">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
               <a class="projects-link link" href="">
                 <img src="./images/portfolio/prime.jpg" alt="Наушники" width="370" height="294" />
-                <h2 class="projects-title">Проект Prime</h2>
-                <p class="projects-text">Маркетинг</p>
+                <div class="projects-item-content">
+                  <h2 class="projects-title">Проект Prime</h2>
+                  <p class="projects-text">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -109,8 +117,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-title">Проект Boxes</h2>
-                <p class="projects-text">Приложение</p>
+                <div class="projects-item-content">
+                  <h2 class="projects-title">Проект Boxes</h2>
+                  <p class="projects-text">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -121,8 +131,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-title">Inspiration has no Borders</h2>
-                <p class="projects-text">Веб-сайт</p>
+                <div class="projects-item-content">
+                  <h2 class="projects-title">Inspiration has no Borders</h2>
+                  <p class="projects-text">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -133,15 +145,19 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-title">Издание Limited Edition</h2>
-                <p class="projects-text">Дизайн</p>
+                <div class="projects-item-content">
+                  <h2 class="projects-title">Издание Limited Edition</h2>
+                  <p class="projects-text">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
               <a class="projects-link link" href="">
                 <img src="./images/portfolio/lab.jpg" alt="Ярлык" width="370" height="294" />
-                <h2 class="projects-title">Проект LAB</h2>
-                <p class="projects-text">Маркетинг</p>
+                <div class="projects-item-content">
+                  <h2 class="projects-title">Проект LAB</h2>
+                  <p class="projects-text">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -152,8 +168,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-title">Growing Business</h2>
-                <p class="projects-text">Приложение</p>
+                <div class="projects-item-content">
+                  <h2 class="projects-title">Growing Business</h2>
+                  <p class="projects-text">Приложение</p>
+                </div>
               </a>
             </li>
           </ul>
